[gd_scene load_steps=6 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://goodman_char.tscn" type="PackedScene" id=2]

[sub_resource type="PlaneMesh" id=1]

size = Vector2( 16, 9 )
subdivide_width = 0
subdivide_depth = 0

[sub_resource type="CapsuleShape" id=2]

radius = 0.201002
height = 0.607891

[sub_resource type="CapsuleShape" id=3]

radius = 0.178983
height = 0.496791

[node name="player" type="KinematicBody" groups=[
"player",
]]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.102139 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Visibility", "collision" ]
GRAVITY = -50.8
max_speed = 7
deaccel_pose_map = null
fall_time = 0.2
fall_recover_time = 0.05
impact_time = 0.1
crouch_time = 0.15
jump_velocity = 12
wall_hang_jump_velocity = 12.0
camera_rig = null

[node name="char" parent="." instance=ExtResource( 2 )]

transform = Transform( 0.0993125, 0, 0, 0, 0.0993125, 0, 0, 0, 0.0993125, 0, -0.744387, 0 )

[node name="wheel" type="Spatial" parent="char"]

transform = Transform( 10.0692, 0, 0, 0, 10.0692, 0, 0, 0, 10.0692, 0, 6.79784, 0 )
_sections_unfolded = [ "Transform" ]

[node name="weapon_box" type="MeshInstance" parent="char"]

transform = Transform( 0.855452, 0, 0, 0, 0.0692368, 0.852646, 0, -0.852646, 0.0692368, 0, 12.6907, 9.09481 )
visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = null

[node name="hang_shape" type="CollisionShape" parent="."]

transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.0147561, 0.35191, 0.63279 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2" type="CollisionShape" parent="."]

transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.249409, 0 )
shape = SubResource( 3 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="floor_lock" type="RayCast" parent="."]

enabled = true
cast_to = Vector3( 0, -0.9, 0 )
collision_layer = 1
type_mask = 1

[node name="wall_grab_L" type="RayCast" parent="."]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.502145, 0.305866, 0.429635 )
enabled = true
cast_to = Vector3( 0, -0.2, 0 )
collision_layer = 1
type_mask = 1

[node name="wall_grab_R" type="RayCast" parent="."]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.457377, 0.305866, 0.429635 )
enabled = true
cast_to = Vector3( 0, -0.2, 0 )
collision_layer = 1
type_mask = 1


